--- a/package.json
+++ b/package.json
@@ -14,8 +14,21 @@
   "author": "NHN Ent. FE Development Lab <dl_javascript@nhnent.com>",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^0.25.0",
+    "es5-shim": "^4.5.9",
     "eslint": "^3.7.1",
     "eslint-loader": "^1.5.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-junit-reporter": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webdriver-launcher": "git+https://github.com/everedifice/karma-webdriver-launcher.git",
+    "karma-webpack": "^1.8.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
   }
