--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
   "author": "NHN Ent. FE Development Lab <dl_javascript@nhnent.com>",
   "license": "MIT",
   "devDependencies": {
-    "css-loader": "^0.25.0",
+    "copy-webpack-plugin": "^3.0.1",
     "es5-shim": "^4.5.9",
     "eslint": "^3.7.1",
     "eslint-loader": "^1.5.0",
-    "extract-text-webpack-plugin": "^1.0.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
