--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tui-component-virtual-scroll",
+  "name": "tui.component-virtual-scroll",
   "version": "1.0.0",
   "description": "NHN Ent. Toast UI virtual scroll component",
   "repository": {
