--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tui.component-virtual-scroll",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "NHN Ent. Toast UI virtual scroll component",
   "repository": {
     "type": "git",
@@ -13,11 +13,22 @@
   ],
   "author": "NHN Ent. FE Development Lab <dl_javascript@nhnent.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack-dev-server",
+    "deploy": "webpack --production & webpack --production --minify",
+    "test": "karma start karma.conf.js",
+    "test:ne":  "karma start karma.conf.ne.js",
+    "docs": "npm run docs:jsdoc && npm run docs:copy",
+    "docs:jsdoc": "./node_modules/.bin/jsdoc -t ./node_modules/fedoc-template -c ./jsdoc.conf.json",
+    "docs:copy": "cpy dist/* doc/dist"
+  },
   "devDependencies": {
     "copy-webpack-plugin": "^3.0.1",
+    "cpy-cli": "^1.0.1",
     "es5-shim": "^4.5.9",
     "eslint": "^3.7.1",
     "eslint-loader": "^1.5.0",
+    "fedoc-template": "git+https://14bfd38a036366f7ca90355d202038126127bd01:x-oauth-basic@github.nhnent.com/fe/share-fedoc-template.git#develop",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
