--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "tui.component-virtual-scroll",
+  "name": "tui-component-virtual-scroll",
   "authors": [
     "NHN Ent. FE Development Lab <dl_javascript@nhnent.com>"
   ],
@@ -8,6 +8,9 @@
   "ignore": [
     "src",
     "webpack.config.js",
+    "karma.conf.js",
+    "karma.conf.ne.js",
+    "jsdoc.conf.json",
     "index.html",
     "package.json"
   ],
