--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,25 @@
 {
-  "name": "tui-component-virtual-scroll",
-  "authors": [
-    "NHN Ent. FE Development Lab <dl_javascript@nhnent.com>"
-  ],
-  "license": "MIT",
-  "description": "NHN Ent. Toast UI virtual scroll component",
-  "ignore": [
-    "src",
-    "test",
-    "examples",
-    "webpack.config.js",
-    "karma.conf.js",
-    "karma.conf.ne.js",
-    "jsdoc.conf.json",
-    "index.html",
-    "package.json"
-  ],
-  "dependencies": {
-    "tui-code-snippet": "^1.2.1"
-  }
+    "name": "tui-virtual-scroll",
+    "authors": [
+        "NHNent. FE Development Lab <dl_javascript@nhnent.com>"
+    ],
+    "main": [
+        "dist/tui-project-name.js"
+    ],
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "examples",
+        "src",
+        "test",
+        "jsdoc.conf.json",
+        "karma.conf.js",
+        "webpack.config.js",
+        "package.json"
+    ],
+    "dependencies": {
+        "tui-code-snippet": "~1.2.5"
+    }
 }
