--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "MIT",
   "devDependencies": {
     "es5-shim": "^4.5.9",
-    "eslint": "^3.19.0",
+    "eslint": "^4.5.0",
     "eslint-config-tui": "^1.0.1",
     "eslint-loader": "^1.6.1",
     "istanbul-instrumenter-loader": "^1.0.0",
@@ -34,10 +34,10 @@
     "jsdoc": "^3.5.4",
     "karma": "1.3.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "latest",
-    "karma-es5-shim": "0.0.4",
+    "karma-coverage": "^1.1.1",
+    "karma-es5-shim": "^0.0.4",
     "karma-jasmine": "^1.0.2",
-    "karma-junit-reporter": "latest",
+    "karma-junit-reporter": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webdriver-launcher": "git+https://github.com/nhnent/karma-webdriver-launcher.git",
     "karma-webpack": "^1.8.0",
