--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
         "NHNent. FE Development Lab <dl_javascript@nhnent.com>"
     ],
     "main": [
-        "dist/tui-project-name.js"
+        "dist/tui-virtual-scroll.js"
     ],
     "license": "MIT",
     "ignore": [
@@ -20,6 +20,6 @@
         "package.json"
     ],
     "dependencies": {
-        "tui-code-snippet": "~1.2.5"
+        "tui-code-snippet": "^1.2.5"
     }
 }
