--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "tui-virtual-scroll",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "main": "dist/tui-virtual-scroll",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "karma start --no-single-run",
     "test:ne": "KARMA_SERVER=ne karma start",
     "bundle": "webpack && webpack -p",
     "serve": "webpack-dev-server --inline --hot -d",
     "serve:ie8": "webpack-dev-server -d",
-    "cpy-dist2doc": "mkdir -p doc/dist && cp -f -r dist doc",
-    "doc": "jsdoc -c jsdoc.conf.json && npm run cpy-dist2doc"
+    "doc:dev": "tuidoc --dev",
+    "doc": "tuidoc"
   },
   "description": "TOAST UI Component: VirtualScroll",
   "repository": {
@@ -31,7 +34,6 @@
     "eslint-loader": "^1.6.1",
     "istanbul-instrumenter-loader": "^1.0.0",
     "jasmine-core": "^2.4.1",
-    "jsdoc": "^3.5.4",
     "karma": "1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
@@ -42,7 +44,6 @@
     "karma-webdriver-launcher": "git+https://github.com/nhnent/karma-webdriver-launcher.git",
     "karma-webpack": "^1.8.0",
     "safe-umd-webpack-plugin": "^0.0.1",
-    "tui-jsdoc-template": "^1.1.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.11.0"
   },
