--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "tui-virtual-scroll",
     "authors": [
-        "NHNent. FE Development Lab <dl_javascript@nhnent.com>"
+        "NHN. FE Development Lab <dl_javascript@nhn.com>"
     ],
     "main": [
         "dist/tui-virtual-scroll.js"
