--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
     "bundle": "webpack && webpack -p",
     "serve": "webpack-dev-server --inline --hot -d",
     "serve:ie8": "webpack-dev-server -d",
-    "doc:dev": "tuidoc --dev",
-    "doc": "tuidoc"
+    "doc": "tuidoc && tuidoc --serv"
   },
   "description": "TOAST UI Component: VirtualScroll",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nhnent/tui.virtual-scroll"
+    "url": "https://github.com/nhn/tui.virtual-scroll"
   },
   "keywords": [
     "nhn",
-    "nhnent",
     "tui",
     "component",
     "virtual-scroll"
@@ -42,7 +40,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webdriver-launcher": "git+https://github.com/nhnent/karma-webdriver-launcher.git",
+    "karma-webdriver-launcher": "git+https://github.com/nhn/karma-webdriver-launcher.git#v1.2.0",
     "karma-webpack": "^1.8.0",
     "safe-umd-webpack-plugin": "^0.0.1",
     "webpack": "^1.13.3",
