--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tui-virtual-scroll",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "main": "dist/tui-virtual-scroll",
   "files": [
     "dist"
@@ -11,7 +11,8 @@
     "bundle": "webpack && webpack -p",
     "serve": "webpack-dev-server --inline --hot -d",
     "serve:ie8": "webpack-dev-server -d",
-    "doc": "tuidoc && tuidoc --serv"
+    "doc:serve": "tuidoc --serv",
+    "doc": "tuidoc"
   },
   "description": "TOAST UI Component: VirtualScroll",
   "repository": {
